Add robolectric add-opens args
Necessary on robolectric 4.9+ due to https://github.com/robolectric/robolectric/issues/7456